--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 							Proficient in all aspects of information technology,including functional and technical architecture,software 						  development, systems integration, operations.
 						</li>
 						<li>
-							Have developed a professional reputation as the “go-to” person when management needs to make sure that high profile application projects gets completed successfully.
+							Have developed a professional reputation as the &quote;go-to&quote; person when management needs to make sure that high profile application projects gets completed successfully.
 						</li>
 						<li>
 							Having good knowledge of Data Structures, OOPs Concepts.
 						</li>
 						<li>
-							Hand on experience on Java/J2EE Design patterns like –Singleton, Factory Pattern.
+							Hand on experience on Java/J2EE Design patterns like – Singleton, Factory Pattern.
 						</li>
 
 					</ul> 
@@ -168,7 +168,7 @@
 									We are able send a message typed in this system to any of the mobile number entered by the user. Mobile should be connected to the computer.
 								</li>
 								<li>
-									The message will be stored in connected mobile’s outbox and then will be sent.
+									The message will be stored in connected mobile&apos;s outbox and then will be sent.
 								</li>
 							</ul>
 						</li>
