--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							Proficient in all aspects of information technology,including functional and technical architecture,software 						  development, systems integration, operations.
 						</li>
 						<li>
-							Have developed a professional reputation as the &quote;go-to&quote; person when management needs to make sure that high profile application projects gets completed successfully.
+							Have developed a professional reputation as the &quot;go-to&quot; person when management needs to make sure that high profile application projects gets completed successfully.
 						</li>
 						<li>
 							Having good knowledge of Data Structures, OOPs Concepts.
