--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							Having good knowledge of Data Structures, OOPs Concepts.
 						</li>
 						<li>
-							Hand on experience on Java/J2EE Design patterns like – Singleton, Factory Pattern.
+							Hand on experience on Java/J2EE Design patterns like Singleton, Factory Pattern.
 						</li>
 
 					</ul> 
