--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 					</h1>
 					<ol class="ol-styles">
 						<li>
-							Smart MES(Manufacturing Execution System).
+							Manufacturing Execution System.
+.
 							<ul class="ul-experience">
 								<li>
 									Team Size: 30, Technologies: Java, JSF, Seam Framework, Spring MVC, JBOSS Server, Tortoise SVN, MySQL, Hibernate, RESTFul Web Services.
